_sass/elements/_old_dropdown_filters.scss
a.old-filter-item {
  text-decoration: none;
}
.old-project-list {
  margin-top: 0.5rem;
}
//filter container
ul.old-filter-list {
  background: $color-pink;
  display: grid;
  list-style: none;
  padding-left: 0;
  grid-auto-flow: column;
  grid-column-gap: 20px;
  // grid-template-columns: repeat(4, 1fr);
  // ^ See issue #1997 for more info on why this is commented out and changed to 3
  grid-template-columns: repeat(3, 1fr);
}

//category boxes
li.old-filter-item {
  border: 1px solid rgba(0, 0, 0, 0.24);
  border-radius: 5px;
  color: black;
  background: white;
  display: flex;
  padding: 10px 15px;
  position: relative;
  transition-duration: 0.5s;
  cursor: pointer;
}

//category names
li.old-filter-item a {
  color: black;
  text-transform: capitalize;
}

li.old-filter-item:hover,
li.old-filter-item:focus-within {
  background: white;
}

li.old-filter-item:focus-within a {
  outline: none;
}

//dropdown
ul.old-filter-list li ul {
  background: white;
  border: 1px solid rgba(0, 0, 0, 0.24);
  visibility: hidden;
  opacity: 0;
  transition: all 0.5s ease;
  z-index: 99;
  list-style: none;
  width: 100%;
  padding: 15px 20px;
  line-height: 2em;
  font-size: 0.9em;
  position: absolute;
  left: 0;
  top: 100%;
  cursor: default;
}

ul.old-filter-list li:hover > ul,
ul.old-filter-list li:focus-within > ul,
ul.old-filter-list li ul:hover,
ul.old-filter-list li ul:focus {
  visibility: visible;
  opacity: 1;
  display: block;
}

ul.old-filter-list li ul li {
  clear: both;
  width: 100%;
  text-align: left;
}

.old-hidden-project {
  display: none;
}

.old-dropdown label {
  cursor: pointer;
  vertical-align: middle;
}

.old-filter-checkbox {
  border: 1px solid #000000;
  border-radius: 4px;
  margin: 0px 5px;
  cursor: pointer;
  vertical-align: middle;
}

.old-labelArrow {
  transform: rotate(-45deg);
  font-size: 24px;
  position: absolute;
  top: 2%;
  right: 10%;
}

.old-filter-tag-container {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
}

.old-filter-tag {
  align-self: flex-start;
  height: 24px;
  box-sizing: border-box;
  max-width: fit-content;

  margin: 0em 0.5em 1em;
  padding: 0.15em 1em;
  background: $color-red;
  border: none;
  border-radius: 5px;
  color: $color-white;
  font-weight: 500;
  font-size: 15px;
  text-transform: capitalize;

  &::after {
    content: "\00d7";
    padding-left: 0.5em;
  }

  &:hover,
  &:active,
  &:focus {
    background: darken($color-red, 10%);
    color: $color-white;
    text-decoration: none;
    cursor: pointer;
  }
}

.old-filter-tag span {
  margin: 0 0 0 5px;
  min-height: 20px;
}

a.old-clear-filter-tags {
  margin-left: 1em;
  text-decoration: underline;
  color: $color-cement;

  &:hover {
    cursor: pointer;
  }
}

.old-number-of-checked-boxes {
  color: $color-red;
}

@media #{$bp-below-tablet} {
  //resize dropdown on tablet and mobile view
  ul.old-filter-list li ul {
    width: 100%;
    padding: 15px;
  }
}

@media (max-width: 659px) {
  //creating 2 rows and 2 columns to display categories on mobile
  ul.old-filter-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-auto-flow: row;
    grid-gap: 10px;
  }

  //resize category labels
  li.old-filter-item {
    padding: 5px 10px;
  }

  //resize and reposition label arrow
  .old-labelArrow {
    top: -8%;
    right: 5%;
    font-size: 20px;
  }

  .old-clear-filter-tags {
    display: none;
  }
}

